// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoaderInput should not render a loading spinner when loading prop is false 1`] = `
<DocumentFragment>
  <div
    class="container d-flex loader-input"
  >
    <input
      class="form-control with-invalid-icon"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`LoaderInput should render a loading spinner when loading prop is true 1`] = `
<DocumentFragment>
  <div
    class="container d-flex loader-input"
  >
    <input
      class="form-control with-invalid-icon"
      type="text"
    />
    <div
      class="loadingSpinner spinner"
    />
  </div>
</DocumentFragment>
`;
